# SpaceShooter

./: CMakeLists.txt  README.md
Framework/: CMakeLists.txt  cameraController.cpp  cameraController.hpp  framework.hpp  shaderData.hpp
Project/: CMakeLists.txt  game.cpp
Project/shaders/: CMakeLists.txt
Project/shaders/glsl/: background.frag  background.vert  instances.vert  phong.frag  phong.vert  terrain_proxy.frag  terrain_proxy.vert
TGA/: README.md
TGA/cmake/: FindGLFW.cmake
TGA/include/tga/: tga.hpp  tga_core.h
TGA/include/tga/tga_vulkan/: tga_vulkan.hpp  tga_vulkan_WSI.hpp  tga_vulkan_debug.hpp
TGA/src/utils/: tga_utils.cpp
heightmap_viewer/: CMakeLists.txt  CameraController.cpp  CameraController.hpp  HeightmapViewer.cpp  HeightmapViewer.hpp
